--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <div class="auth-links">
                 <a href="PLUG.html">로그인</a>
                 <a href="#">마이페이지</a>
-                <a href="#">회원가입</a>
+                <a href="join.html">회원가입</a>
             </div>
         </header>
 
@@ -36,7 +36,7 @@
                 </div>
                 <button type="submit" class="login-btn">로그인</button>
             </form>
-            <button class="signup-btn">회원가입</button>
+            <button class="signup-btn" onclick="window.location.href='join.html'">회원가입</button>
         </div>
     </div>
     <script src="login.js"></script>
