--- a/join.html
+++ b/join.html
@@ -15,7 +15,7 @@
             <div class="auth-links">
                 <a href="login.html">로그인</a>
                 <a href="#">마이페이지</a>
-                <a href="#">회원가입</a>
+                <a href="join.html">회원가입</a>
             </div>
         </header>
 
@@ -23,33 +23,36 @@
         <div class="signup-form">
             
             <form id="signup-form">
+               
                 <div class="form-group">
-                    <label for="name">이름</label>
-                    <input type="text" id="name" name="name" required>
-                <div class="form-group">
-                    <label for="username">아이디</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="USER_ID">아이디</label>
+                    <input type="text" id="USER_ID" name="USER_ID" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">비밀번호</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="USER_PW">비밀번호</label>
+                    <input type="text" id="USER_PW" name="USER_PW" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">이메일</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="USER_NICK">닉네임</label>
+                    <input type="text" id="USER_NICK" name="USER_NICK" required>
                 </div>
                 <div class="form-group">
-                    <label for="address">주소</label>
-                    <input type="text" id="address" name="address" required>
+                    <label for="USER_ADDR">주소</label>
+                    <input type="text" id="USER_ADDR" name="USER_ADDR" required>
                 </div>
                 <div class="form-group">
-                    <label for="ssn">주민등록번호</label>
-                    <input type="text" id="ssn" name="ssn" placeholder="예: 010123-1234567" required>
+                    <label for="USER_ACCOUNT">사용자 계좌번호</label>
+                    <input type="text" id="USER_ACCOUNT" name="USER_ACCOUNT"  required>
                 </div>
                 <div class="form-group">
-                    <label for="phone">연락처</label>
-                    <input type="tel" id="phone" name="phone" placeholder="예: 010-0000-0000" required>
+                    <label for="USER_PHONE">연락처</label>
+                    <input type="text" id="USER_PHONE" name="USER_PHONE"  required>
                 </div>
+                <div class="form-group">
+                    <label for="JOINED_AT">가입 일자</label>
+                    <input type="text" id="JOINED_AT" name="JOINED_AT"  required>
+                </div>
+
                 <button type="submit" class="signup-btn">회원가입하기</button>
             </form>
         </div>
